icons hidden on mobile, fixes #88

--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -58,6 +58,9 @@ $dark-blue-green: #0a303d
   a:hover
     color: $red
 
+  .social-links
+    @media screen and (max-width: 992px)
+      display: none
 
 // Mailchimp sign up
    =============================================================================
@@ -191,7 +194,7 @@ input.mce_inline_error
 
 .overlay
   border-radius: 0.9em
-  
+
 .cast-small
   padding: 7px 0
   width: 143px
